external-crates/move/crates/move-compiler/tests/move_check/parser/use_module_member_invalid_missing_semicolon.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/use_module_member_invalid_missing_semicolon.move:2:8
  │
2 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_module_member_invalid_missing_semicolon.move:5:1
  │
5 │ }
  │ ^
  │ │
  │ Unexpected '}'
  │ Expected ';'

